--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   equatable: ^2.0.5
   firebase_core: ^3.6.0
   firebase_auth: ^5.3.1
+  fpdart: ^1.1.0
 
 dev_dependencies:
   flutter_test:
