--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_core: ^3.6.0
   firebase_auth: ^5.3.1
   fpdart: ^1.1.0
+  get_it: ^8.0.2
 
 dev_dependencies:
   flutter_test:
